--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.9.0
@@ -22,7 +21,7 @@ services:
       - ./elasticdump:/app
     networks:
       - elastic-network
-    command: sh -c "npm install elasticdump && tail -f /dev/null"
+    command: sh -c "npm install -g elasticdump && tail -f /dev/null"
 
 volumes:
   es_data:
